We basicly add a ppo and a clipping function dor the reward.

--- a/DT.ipynb
+++ b/DT.ipynb
@@ -122,24 +122,24 @@
       },
       "outputs": [],
       "source": [
-        "from decision_transformer import DecisionTransformer\n",
+        "from decision_transformer import DecisionTransformer, CLIPPING_METHOD, EXP_METHOD, BASIC_METHOD, BASELINE_METHOD\n",
         "import matplotlib.pyplot as plt\n",
         "import gym\n",
         "\n",
-        "LEN_EP = 1000\n",
         "\n",
-        "env = gym.make('CartPole-v1')\n",
+        "LEN_EP = 800\n",
+        "ENV = 'CartPole-v0'\n",
+        "env = gym.make(ENV)\n",
         "state_dim = env.observation_space.shape[0]\n",
         "action_dim = env.action_space.n\n",
         "\n",
         "env.close()\n",
         "\n",
-        "model = DecisionTransformer(state_dim, action_dim, 192, lr=1e-3, batch_size=64, mem_capacity=2048)\n",
-        "r, l, r_ = model.learn('CartPole-v1', max_epsiode=LEN_EP, max_ep_len=1000, notebook=True)\n",
+        "model = DecisionTransformer(state_dim, action_dim, 192, lr=1e-5, batch_size=32, mem_capacity=4096)\n",
+        "r, l, r_ = model.learn(ENV, max_epsiode=LEN_EP, max_ep_len=200, reward_scale = 1e-4, reward_method=CLIPPING_METHOD)\n",
         "\n",
         "\n",
         "\n",
-        "plt.plot(range(LEN_EP), r)\n",
         "\n",
         "fig, axs = plt.subplots(3)\n",
         "axs[0].plot(range(LEN_EP), r)\n",
@@ -153,7 +153,7 @@
         "axs[2].set(xlabel = 'num_episodes', ylabel = 'reward')\n",
         "\n",
         "\n",
-        "plt.show()"
+        "plt.show()\n"
       ]
     }
   ],
