Add the ppo function

--- a/DT.ipynb
+++ b/DT.ipynb
@@ -126,8 +126,7 @@
         "import matplotlib.pyplot as plt\n",
         "import gym\n",
         "\n",
-        "\n",
-        "LEN_EP = 800\n",
+        "LEN_EP = 400\n",
         "ENV = 'CartPole-v0'\n",
         "env = gym.make(ENV)\n",
         "state_dim = env.observation_space.shape[0]\n",
@@ -135,8 +134,8 @@
         "\n",
         "env.close()\n",
         "\n",
-        "model = DecisionTransformer(state_dim, action_dim, 192, lr=1e-5, batch_size=32, mem_capacity=4096)\n",
-        "r, l, r_ = model.learn(ENV, max_epsiode=LEN_EP, max_ep_len=200, reward_scale = 1e-4, reward_method=CLIPPING_METHOD)\n",
+        "model = DecisionTransformer(state_dim, action_dim, 12, lr=1e-5, batch_size=1, mem_capacity=4096)\n",
+        "r, l, r_ = model.Learn(ENV, max_epsiode=LEN_EP, max_ep_len=200, reward_scale = 1e-4, reward_method=CLIPPING_METHOD, notebook=True)\n",
         "\n",
         "\n",
         "\n",
