Just fixed an error

--- a/DT_PPO.ipynb
+++ b/DT_PPO.ipynb
@@ -26,7 +26,7 @@
         }
       ],
       "source": [
-        "!git clone --branch alternative https://github.com/Maynerx/online-decisioin-transformer.git"
+        "!git clone --branch Real-PPO https://github.com/Maynerx/online-decisioin-transformer.git"
       ]
     },
     {
