--- a/DT_PPO.ipynb
+++ b/DT_PPO.ipynb
@@ -99,6 +99,22 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# Const\n",
+        "\n",
+        "LEN_EP = int(4e3)\n",
+        "LR = 3e-4\n",
+        "HIDDEN_SIZE = 48\n",
+        "GAMMA = 0.99\n",
+        "CLIP = 0.3\n",
+        "REWARD_SCALE = 1e-4"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -126,23 +142,20 @@
         "import matplotlib.pyplot as plt\n",
         "import gym\n",
         "\n",
-        "import gym\n",
-        "\n",
         "ENV = 'CartPole-v0'\n",
         "env = gym.make(ENV)\n",
         "state_dim = env.observation_space.shape[0]\n",
         "action_dim = env.action_space.n\n",
         "\n",
-        "LEN_EP = int(1e4)\n",
         "\n",
         "env.close()\n",
         "\n",
-        "agent = DT_PPO(state_dim=state_dim, action_dim=action_dim, hidden_size=12, lr = 3e-4, gamma=0.99, clip=0.2)\n",
-        "r, l, r_ = agent.Learn(LEN_EP, ENV, notebook=True, reward_scale=1e-4)\n",
+        "agent = DT_PPO(state_dim=state_dim, action_dim=action_dim, hidden_size=HIDDEN_SIZE, clip=CLIP, lr=LR)\n",
+        "r, l, r_, r__ = agent.Learn(LEN_EP, ENV, notebook=True, reward_scale=REWARD_SCALE)\n",
         "\n",
         "L = len(r)\n",
         "\n",
-        "fig, axs = plt.subplots(3)\n",
+        "fig, axs = plt.subplots(4)\n",
         "axs[0].plot(range(L), r)\n",
         "axs[0].set_title('Absolute reward')\n",
         "axs[0].set(xlabel = 'num_episodes', ylabel = 'reward')\n",
@@ -152,10 +165,20 @@
         "axs[2].plot(range(L), r_, 'tab:green')\n",
         "axs[2].set_title('Av reward')\n",
         "axs[2].set(xlabel = 'num_episodes', ylabel = 'reward')\n",
+        "axs[3].set_title('Av reward cut 5')\n",
+        "axs[3].set(xlabel = 'num_episodes', ylabel = 'reward')\n",
+        "axs[3].plot(range(L), r__, 'tab:red')\n",
         "\n",
         "\n",
-        "plt.show()"
+        "plt.show()\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
