Upadte the notebook file

--- a/DT_PPO.ipynb
+++ b/DT_PPO.ipynb
@@ -142,16 +142,18 @@
         "import matplotlib.pyplot as plt\n",
         "import gym\n",
         "\n",
-        "ENV = 'CartPole-v0'\n",
+        "ENV = 'CartPole-v1'\n",
         "env = gym.make(ENV)\n",
         "state_dim = env.observation_space.shape[0]\n",
         "action_dim = env.action_space.n\n",
         "\n",
+        "LEN_EP = int(1e4)\n",
         "\n",
         "env.close()\n",
         "\n",
-        "agent = DT_PPO(state_dim=state_dim, action_dim=action_dim, hidden_size=HIDDEN_SIZE, clip=CLIP, lr=LR)\n",
-        "r, l, r_, r__ = agent.Learn(LEN_EP, ENV, notebook=True, reward_scale=REWARD_SCALE)\n",
+        "\n",
+        "agent = DT_PPO(state_dim=state_dim, action_dim=action_dim, hidden_size=24, clip=0.3, epoch=1, gamma=0.9)\n",
+        "r, l, r_, r__ = agent.Learn(LEN_EP, ENV, notebook=False,reward_scale=1e-1)\n",
         "\n",
         "L = len(r)\n",
         "\n",
